--- a/k8s/playbook.yml
+++ b/k8s/playbook.yml
@@ -8,8 +8,8 @@
   modules_defaults:
     group/k8s:
       namespace: "{{namespace}}"
-      api_key:
-      host:
+      api_key: sha256~uhNze7hxxHwQwJW78adR36rVYgmzQaEqlad6frt3Qc0
+      host: https://api.sandbox-m2.ll9k.p1.openshiftapps.com:6443
   
   tasks:
     - name: Crear los objetos del manifiesto
